@@ -298,6 +298,9 @@ $_lang['permission_denied_msg'] = 'You do not have the proper access policy perm
 $_lang['please_wait'] = 'Please wait...';
 $_lang['plugin'] = 'Plugin';
 $_lang['plugins'] = 'Plugins';
+$_lang['po_make_all_unpub'] = 'Make All Unpublished';
+$_lang['po_make_all_pub'] = 'Make All Published';
+$_lang['po_preserve'] = 'Preserve Published Status';
 $_lang['preview'] = 'Preview';
 $_lang['private'] = 'Private';
 $_lang['processor_err_nf'] = 'Processor not found: [[+target]]';
@@ -311,6 +314,7 @@ $_lang['publish_document'] = 'Publish document';
 $_lang['publish_events'] = 'Publish Events';
 $_lang['published'] = 'Published';
 $_lang['publishedon'] = 'Published On';
+$_lang['publishing_options'] = 'Publishing Options';
 $_lang['quick_create'] = 'Quick Create';
 $_lang['quick_create_chunk'] = 'Quick Create Chunk';
 $_lang['quick_create_plugin'] = 'Quick Create Plugin';
