@@ -206,6 +206,9 @@ $_lang['setting_cultureKey_desc'] = 'Select the language for all non-manager Con
 $_lang['setting_default_content_type'] = 'Default Content Type';
 $_lang['setting_default_content_type_desc'] = 'Select the default Content Type you wish to use for new Resources. You can still select a different Content Type in the Resource editor; this setting just pre-selects one of your Content Types for you.';
 
+$_lang['setting_default_duplicate_publish_option'] = 'Default Duplicate Resource Publishing Option';
+$_lang['setting_default_duplicate_publish_option_desc'] = 'The default selected option when duplicating a Resource. Can be either "unpublish" to unpublish all duplicates, "publish" to publish all duplicates, or "preserve" to preserve the publish state based on the duplicated Resource.';
+
 $_lang['setting_default_template'] = 'Default Template';
 $_lang['setting_default_template_desc'] = 'Select the default Template you wish to use for new Resources. You can still select a different template in the Resource editor, this setting just pre-selects one of your Templates for you.';
 
