@@ -1479,6 +1479,9 @@ span.required {
     font-weight: normal;
     top: 0;
 }
+.x-form-check-wrap .x-form-cb-label {
+    font-weight: normal;
+}
 .modx-tv .x-form-check-wrap {
     line-height: 14px !important;
 }
